[tool.poetry]
name = "transfer_learning_test_project"
version = "0.1.0"
description = "CNN Binary Classifier"
authors = ["Artem Gorodetskii <vargor@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3.0"
keras = "^2.4.3"
pandas = "^1.1.0"
Pillow = "^7.2.0"
scikit-learn = "^0.23.2"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
